static/css/base.css
@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
:root {
	--dark: #111a2c;
	--burgendy: #7d1224;
	--lavender: #e7e0da;
	--white: #ffffff;
	--blue: #14223d;
	--navbar-height: 8vh;
	--page-content-height: 75vh;
	--footer-height: 17vh;
	--nav-tab-height: 7vh;
	--page-tab-height: 81vh;
	--footer-tab-height: 12vh;
	--main-font: 'Varela Round', sans-serif;
	--h1-padding: 35px;
	--h1-size: 2rem;
}


/* General styles */

* {
	margin: 0;
	padding: 0;
}

body {
	font-family: var(--main-font);
	letter-spacing: .5px;
	background: rgb(244, 238, 233);
	background: linear-gradient(90deg, rgba(244, 238, 233, 1) 31%, rgba(247, 229, 207, 1) 76%);
}

ul {
	padding-left: 0;
}

.flex-container {
	padding-left: 1.4rem;
	padding-right: 1.4rem;
	display: flex;
}

.page-container {
	margin-top: var(--navbar-height);
	min-height: var(--page-content-height);
}

.center-content {
	position: relative;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 100%;
}

.fill-page {
	height: 73vh;
}


/* Navigation bar */


/* Source - responsive navigation bar sourced and tweaked to spec from https://www.aleksandrhovhannisyan.com/blog/responsive-navbar-without-bootstrap/ */

.navbar-container {
	justify-content: space-between;
	height: 100%;
	align-items: center;
	font-size: 120%;
}

.navbar-item {
	margin: 0.4em;
}

.brand-link,
.navbar-link {
	color: var(--lavender);
	transition: color 0.2s ease-in-out;
	text-decoration: none;
	font-weight: 400;
	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	font-size: 110%;
}

.brand-link {
	border: 1px solid transparent;
	border-radius: 2px;
	padding: 5px;
	transition: 0.7s;
}

button.navbar-toggle.d-md-none {
	padding-left: 35px;
}

button.navbar-toggle.d-md-none:focus {
	outline: none;
}

.brand-link:focus,
.brand-link:hover {
	color: var(--white);
	text-decoration: none;
	border: 1px solid;
}

.navbar-link {
	width: 100%;
	padding: 0.4em 0.4em;
	border: none;
	background-color: transparent;
}

.navbar-link:focus,
.navbar-link:hover,
a#navbarDropdown:hover {
	color: var(--white);
	text-decoration: none;
}

.navbar-toggle {
	cursor: pointer;
	border: none;
	background-color: transparent;
	width: 40px;
	height: 40px;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
}

.navbar-menu {
	position: fixed;
	top: var(--navbar-height);
	bottom: 0;
	transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
	opacity: 0;
	visibility: hidden;
	left: 0;
	right: 0;
}

.icon-bar {
	display: block;
	width: 25px;
	height: 2px;
	margin: 3px;
	transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
	background-color: var(--lavender);
}

.mobile-icon-list {
	list-style-type: none;
	display: flex;
	margin-bottom: 0;
}

.mobile-icon-btn {
	padding: 0.4em 0.4em;
	color: var(--lavender);
	background-color: transparent;
	transition: color 0.2s ease-in-out;
	display: flex;
	align-items: center;
	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	border: none;
}

.mobile-icons {
	padding: 0.4em 0.4em;
	text-decoration: none;
}

.nav-wishlist-count {
	font-size: 0.55rem;
	position: absolute;
	top: 11px;
	right: 55px;
	width: 14px;
	height: 14px;
	background-color: var(--burgendy);
	border: 1px solid;
	border-radius: 50%;
}

span.nav-basket-count {
	font-size: 0.55rem;
	position: absolute;
	background-color: var(--burgendy);
	border-radius: 50%;
	top: 11px;
	right: 21px;
	border: 1px solid;
	width: 14px;
	height: 14px;
}

.navbar-toggle:focus .icon-bar,
.navbar-toggle:hover .icon-bar {
	background-color: var(--white);
}

.navbar-links {
	list-style-type: none;
	max-height: 0;
	position: absolute;
	background-color: var(--burgendy);
	display: flex;
	flex-direction: column;
	align-items: center;
	left: 0;
	right: 0;
	margin: 1.4rem;
	border-radius: 5px;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
}

a#navbarDropdown {
	color: var(--lavender);
	padding-top: 5px;
	padding-bottom: 5px;
	padding-right: 5px;
}

#navigation-bar.opened .navbar-links {
	padding: 1em;
	max-height: none;
}

#navigation-bar {
	position: fixed;
	height: var(--navbar-height);
	background-color: var(--burgendy);
	left: 0;
	right: 0;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
	z-index: 50;
	border: 1px solid var(--lavender);
	box-shadow: 0 0 20px rgb(0 0 0);
}

#navigation-bar.opened .navbar-menu {
	background-color: rgba(0, 0, 0, 0.4);
	opacity: 1;
	visibility: visible;
}

#navigation-bar.opened .navbar-toggle .icon-bar:first-child,
#navigation-bar.opened .navbar-toggle .icon-bar:last-child {
	position: absolute;
	margin: 0;
	width: 30px;
}

#navigation-bar.opened .navbar-toggle .icon-bar:first-child {
	transform: rotate(45deg);
}

#navigation-bar.opened .navbar-toggle .icon-bar:nth-child(2) {
	opacity: 0;
}

#navigation-bar.opened .navbar-toggle .icon-bar:last-child {
	transform: rotate(-45deg);
}


/* Footer */

footer {
	height: var(--footer-height);
	background-color: var(--burgendy);
	justify-content: center;
	align-items: center;
	flex-direction: column;
	font-size: 130%;
	padding-top: 10px;
}

footer ul {
	list-style-type: none;
	padding-top: 10px;
}

footer ul li a {
	color: var(--lavender);
	text-decoration: none;
	padding-top: 8px;
	padding-bottom: 0px;
	padding-right: 5px;
	padding-left: 5px;
	border: 1px solid transparent;
	transition: .7s;
	border-radius: 3px;
}

footer ul li a:hover {
	color: white;
	border: 1px solid;
}

.footer-link a i {
	font-size: 130%;
}

#footer ul li {
	display: inline
}


/* Wishlist and basket sidebars */

.sidebar {
	background-color: var(--blue);
	color: var(--lavender);
	height: 100vh;
	z-index: 200;
	position: fixed;
	width: 100vw;
	top: 0;
	right: -105%;
	overflow-x: hidden;
	transition: 1.25s;
	text-align: center;
	padding-left: 25px;
	padding-right: 25px;
}

.sidebar-opened {
	right: 0;
}

.sidebar-header {
	margin-top: 30px;
	font-size: 200%;
	margin-bottom: 15px;
}

.empty-sidebar {
	font-size: 1.5rem;
}
/* ... */

